--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -191,4 +191,5 @@
     <system:String x:Key="item214">VÉRIFICATION...</system:String>
     <system:String x:Key="item215">Erreur lors du calcul du hachage de l'actif:</system:String>
     <system:String x:Key="item216">Veuillez désinstaller tous les fichiers d'actifs personnalisés (.pack) lors de la lecture sur l'un des serveurs principaux, sinon cela pourrait entraîner une interdiction.</system:String>
+    <system:String x:Key="item217">RUNNING</system:String>
 </ResourceDictionary>
