--- a/H1EmuLauncher/Language/StringResources.hr-HR.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr-HR.xaml
@@ -191,4 +191,5 @@
     <system:String x:Key="item214">PROVJERAVANJE...</system:String>
     <system:String x:Key="item215">Pogreška pri izračunavanju raspršivanja sredstava:</system:String>
     <system:String x:Key="item216">Deinstalirajte sve prilagođene datoteke (.pack) kada igrate na bilo kojem glavnom poslužitelju ili bi to moglo rezultirati zabranom.</system:String>
+    <system:String x:Key="item217">RUNNING</system:String>
 </ResourceDictionary>
