--- a/H1EmuLauncher/Windows/InstallServerInline.xaml
+++ b/H1EmuLauncher/Windows/InstallServerInline.xaml
@@ -142,16 +142,8 @@
                                    TextWrapping="Wrap"
                                    TextAlignment="Center"
                                    VerticalAlignment="Center"
-                                   HorizontalAlignment="Center">
-
-                            <TextBlock.Effect>
-                                <DropShadowEffect BlurRadius="8"
-                                                  Direction="-90"
-                                                  RenderingBias="Quality"
-                                                  ShadowDepth="1"
-                                                  Opacity="0.3"/>
-                            </TextBlock.Effect>
-                        </TextBlock>
+                                   HorizontalAlignment="Center"
+                                   Style="{DynamicResource TextBlockStyle}"/>
 
                         <!-- Divider -->
                         <Rectangle Grid.Row="2"
@@ -183,8 +175,6 @@
                                     Click="InstallServerButton"
                                     Margin="20"
                                     Padding="25,7,25,7"
-                                    BorderThickness="0"
-                                    FontFamily="Arial Black"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item43}"
@@ -207,8 +197,6 @@
                                     Click="InstallServerButton"
                                     Margin="20"
                                     Padding="25,7,25,7"
-                                    BorderThickness="0"
-                                    FontFamily="Arial Black"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item44}"
@@ -262,7 +250,8 @@
                                 <TextBlock x:Name="settingsProgressText"
                                            Margin="0,0,20,10"
                                            VerticalAlignment="Center"
-                                           HorizontalAlignment="Center"/>
+                                           HorizontalAlignment="Center"
+                                           Style="{DynamicResource TextBlockStyle}"/>
                             </Grid>
                         </Border>
                     </Grid>
